[project]
name = "data-cleaner"
version = "0.1.0"
description = "A package to help format and manage your data files"
authors = [
    {name = "itsbluejelly",email = "ronniedenzel0@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
